force-app/main/default/objects/Site_Expenses__c/Site_Expenses__c.object-meta.xml
<CustomObject>
    <label>Site Expense</label>
    <nameField>
        <label>Name of Expense</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>