force-app/main/default/objects/Site_Expenses__c/fields/Date_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Expense__c</fullName>
    <label>Date of Expense</label>
    <type>Date</type>
</CustomField>