force-app/main/default/objects/Site_Expenses__c/fields/Site_Visited__c.field-meta.xml
<CustomField>
    <fullName>Site_Visited__c</fullName>
    <label>Site Visited</label>
    <referenceTo>Site_Visits__c</referenceTo>
    <relationshipLabel>Site Expenses</relationshipLabel>
    <relationshipName>Site_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>