force-app/main/default/objects/Site_Expenses__c/fields/Type_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Expense__c</fullName>
    <label>Type of Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air fare</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Public transport</fullName>
            </value>
            <value>
                <fullName>Misc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>