force-app/main/default/objects/Site_Expenses__c/fields/Type_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Payment__c</fullName>
    <label>Type Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>